# prytty

./: .gitignore  Cargo.toml  README.md
prytty-cli/: Cargo.toml
prytty-cli/src/: main.rs
prytty-core/src/: theme.rs
prytty-formats/src/: diff.rs  lib.rs
prytty-wasm/: Cargo.toml
prytty-wasm/src/: lib.rs
