[package]
name = "prytty-wasm"
description = "WASM build of Prytty for Crytter integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
prytty-core = { workspace = true }
prytty-syntax = { workspace = true }
wasm-bindgen = "0.2"
